--- a/index.html
+++ b/index.html
@@ -501,16 +501,16 @@
         <section id="programma" class="section">
             <div class="section-header">
                 <h2 class="section-title">Programma del Viaggio</h2>
-                <div>
+          </br>      <div>
                     <button class="btn btn-primary" onclick="exportItinerary()">
                         <span>Esporta Programma</span>
                     </button>
                     <button class="btn btn-error" onclick="clearAllData()" style="margin-left: 10px;">
                         <span>Cancella Tutti i Dati</span>
-                    </button>
+                    </button> </br>
 <button class="btn btn-primary" onclick="exportDataToJson()">
     <span>Esporta JSON</span>
-</button>
+</button> 
 <button class="btn btn-primary" onclick="importDataFromJson()" style="margin-left: 10px;">
     <span>Importa JSON</span>
 </button>
