--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         .section-header {
             display: flex;
             justify-content: space-between;
-            align-items: center;
+            align-items: right;
             margin-bottom: 1rem;
             padding-bottom: 0.5rem;
             border-bottom: 1px solid var(--gray);
@@ -504,13 +504,13 @@
           </br>  </br>    <div>
                     <button class="btn btn-primary" onclick="exportItinerary()">
                         <span>Esporta Programma</span>
-                    </button> </br>
+                    </button> </br> </br>
                     <button class="btn btn-error" onclick="clearAllData()" style="margin-left: 10px;">
                         <span>Cancella Tutti i Dati</span>
                     </button> </br> </br>
 <button class="btn btn-primary" onclick="exportDataToJson()">
     <span>Esporta JSON</span>
-</button> </br>
+</button> </br> </br>
 <button class="btn btn-primary" onclick="importDataFromJson()" style="margin-left: 10px;">
     <span>Importa JSON</span>
 </button>
