Update index.html riga 250 da 0.9 a 0.7

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             border-radius: 4px;
             cursor: pointer;
             transition: background-color 0.3s;
-            font-size: 0.9rem;
+            font-size: 0.7rem;
             display: inline-flex;
             align-items: center;
             gap: 0.5rem;
@@ -611,12 +611,12 @@
 <br><br><hr><br>
         
         <button class="btn btn-primary" onclick="exportArchiveToJson()">
-    <span>Esporta Archivio Completo</span>
+    <span>Esporta Archivio</span>
 </button>
 &nbsp;&nbsp;&nbsp;
 
 <button class="btn btn-primary" onclick="importArchiveFromJson()">
-    <span>Importa Archivio Completo</span>
+    <span>Importa Archivio</span>
 </button>
 <br><br><hr><br>
         
