--- a/index_alt.html
+++ b/index_alt.html
@@ -463,11 +463,11 @@
 }
 
 .green-theme {
-    background: linear-gradient(135deg, #4caf50 0%, #388e3c 50%, #ff9800 50%, #f57c00 100%);
+    background: linear-gradient(135deg, #1976d2 0%, #1565c0 50%, #ff4081 50%, #e91e63 100%);
 }
 
 .purple-theme {
-    background: linear-gradient(135deg, #9c27b0 0%, #7b1fa2 50%, #ff5722 50%, #e64a19 100%);
+    background: linear-gradient(135deg, #1976d2 0%, #1565c0 50%, #ff4081 50%, #e91e63 100%);
 }
 
 /* Stili per i temi alternativi */
