--- a/index_alt.html
+++ b/index_alt.html
@@ -459,15 +459,15 @@
 }
 
 .default-theme {
-    background: linear-gradient(135deg, #1976d2 0%, #1565c0 50%, #ff4081 50%, #e91e63 100%);
+    background-color: var(--primary);
 }
 
 .green-theme {
-    background: linear-gradient(135deg, #1976d2 0%, #1565c0 50%, #ff4081 50%, #e91e63 100%);
+    background-color: var(--primary);
 }
 
 .purple-theme {
-    background: linear-gradient(135deg, #1976d2 0%, #1565c0 50%, #ff4081 50%, #e91e63 100%);
+    background-color: var(--primary);
 }
 
 /* Stili per i temi alternativi */
