--- a/index.html
+++ b/index.html
@@ -478,6 +478,8 @@ body.green-theme {
     --success: #2196f3;
     --warning: #ff5722;
     --error: #f44336;
+    --background-color: light grey;
+    
 }
 
 body.purple-theme {
@@ -487,6 +489,7 @@ body.purple-theme {
     --success: #4caf50;
     --warning: #ff9800;
     --error: #f44336;
+    --background-color: light grey;
 }
 
 .activity-title span.completed,
