--- a/index.html
+++ b/index.html
@@ -459,15 +459,15 @@
 }
 
 .default-theme {
-    background-color: var(--primary);
+    background-color: #1976d2;
 }
 
 .green-theme {
-    background-color: var(--primary);
+    background-color: #4caf50;
 }
 
 .purple-theme {
-    background-color: var(--primary);
+    background-color: #9c27b0;
 }
 
 /* Stili per i temi alternativi */
@@ -478,7 +478,7 @@ body.green-theme {
     --success: #2196f3;
     --warning: #ff5722;
     --error: #f44336;
-    --background-color: light grey;
+    --background-color: #f5f5f5;
     
 }
 
@@ -489,7 +489,7 @@ body.purple-theme {
     --success: #4caf50;
     --warning: #ff9800;
     --error: #f44336;
-    --background-color: light grey;
+    --background-color: #f5f5f5;
 }
 
 .activity-title span.completed,
