--- a/index.html
+++ b/index.html
@@ -589,7 +589,8 @@ body.purple-theme {
                 <ul>
                     <li><a href="#programma">Programma</a></li>
                     <li><a href="#consigli">Consigli</a></li>
-                    <li><a href="#numeri-utili">Numeri Utili</a></li>
+                    <li><a href="#numeri-utili">Numeri</a></li>
+<li><a href="#export-options">Opzioni</a></li>
                 </ul>
             </nav>
         </div>
