--- a/index.html
+++ b/index.html
@@ -207,6 +207,10 @@
             font-style: italic;
             white-space: pre-line; /* Preserva gli spazi e le interruzioni di riga */
         }
+
+        .activity-notes.hidden {
+    display: none !important;
+}
         
         .tips-list {
             padding-left: 1.5rem;
