--- a/index.html
+++ b/index.html
@@ -208,8 +208,10 @@
             white-space: pre-line; /* Preserva gli spazi e le interruzioni di riga */
         }
 
-        .activity-notes.hidden {
+  .activity-notes.hidden {
     display: none !important;
+    background: red !important; /* Solo per debug */
+    border: 2px solid red !important; /* Solo per debug */
 }
         
         .tips-list {
