--- a/index_new.html
+++ b/index_new.html
@@ -607,14 +607,14 @@ body.purple-theme {
                 <h2 class="section-title">Programma del Viaggio</h2>
          
                 </div>
-<div>
-        <center></center><button class="btn btn-secondary" onclick="toggleAllNotes()">
+<div align="center">
+       <button class="btn btn-secondary" onclick="toggleAllNotes()">
             <span>Mostra/Nascondi Note</span>
         </button>
         <button class="btn btn-secondary" onclick="toggleAllDescriptions()">
             <span>Mostra/Nascondi Descrizioni</span>
         </button>
-</center>
+
     </div>
            <br> 
             
