Update index.html removed apple

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="it">
 <head>
@@ -6,9 +7,9 @@
     <meta name="theme-color" content="#144B82">
     <title>Appunti di Viaggio</title>
     <link rel="manifest" href="#manifest" crossorigin="use-credentials">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="Appunti di Viaggio">
+   <meta name="mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="mobile-web-app-title" content="Appunti di Viaggio">
     <style>
         :root {
             --primary: #144B82;
