--- a/index.html
+++ b/index.html
@@ -970,6 +970,10 @@ body.purple-theme {
             "Esempio: Cerca sconti o offerte per gruppi/famiglie"
         ];
 
+	// Dati dell'itinerario (giorni e attività)
+	let itineraryData = [];
+
+	    
 // Dati dei numeri utili con placeholder
         let emergencyData = [
             {
