--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
         .btn-secondary {
             background-color: var(--secondary);
             color: var(--white);
+		bottom: 10px
         }
         
         .btn-secondary:hover {
