--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         .btn-secondary {
             background-color: var(--secondary);
             color: var(--white);
-		bottom: 10px
+		bottom: 10px;
         }
         
         .btn-secondary:hover {
