--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
             justify-content: space-between;
             align-items: center;
         }
-        
+        .header-container .btn {
+    margin-bottom: 0.5rem;
+}
         .logo h1 {
             font-size: 1.5rem;
             margin: 0;
