Update index.html riga 608 aggiunto style="margin-bottom: 0.5rem;

--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
             justify-content: space-between;
             align-items: center;
         }
-        .header-container .btn {
-    margin-bottom: 0.5rem;
-}
+
         .logo h1 {
             font-size: 1.5rem;
             margin: 0;
@@ -607,13 +605,13 @@ body.purple-theme {
         </div>
 
 <div align="center">
-       <button class="btn btn-secondary" onclick="toggleAllNotes()">
+       <button class="btn btn-secondary" onclick="toggleAllNotes()" style="margin-bottom: 0.5rem;>
             <span>Mostra/Nascondi Note</span>
         </button>
-        <button class="btn btn-secondary" onclick="toggleAllDescriptions()">
+        <button class="btn btn-secondary" onclick="toggleAllDescriptions()" style="margin-bottom: 0.5rem;>
             <span>Mostra/Nascondi Descrizioni</span>
         </button>
-        <button id="toggle-reorder-mode" class="btn btn-secondary">
+        <button id="toggle-reorder-mode" class="btn btn-secondary" style="margin-bottom: 0.5rem;>
             <span>Modalità Riordinamento</span>
         </button>
     </div>
