--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
             justify-content: space-between;
             align-items: center;
         }
-
+        .header-container .btn {
+    margin-bottom: 0.5rem;
+}
         .logo h1 {
             font-size: 1.5rem;
             margin: 0;
@@ -605,13 +607,13 @@ body.purple-theme {
         </div>
 
 <div align="center">
-       <button class="btn btn-secondary" onclick="toggleAllNotes()" style="margin-bottom: 0.5rem;>
+       <button class="btn btn-secondary" onclick="toggleAllNotes()">
             <span>Mostra/Nascondi Note</span>
         </button>
-        <button class="btn btn-secondary" onclick="toggleAllDescriptions()" style="margin-bottom: 0.5rem;>
+        <button class="btn btn-secondary" onclick="toggleAllDescriptions()">
             <span>Mostra/Nascondi Descrizioni</span>
         </button>
-        <button id="toggle-reorder-mode" class="btn btn-secondary" style="margin-bottom: 0.5rem;>
+        <button id="toggle-reorder-mode" class="btn btn-secondary">
             <span>Modalità Riordinamento</span>
         </button>
     </div>
