--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
             justify-content: space-between;
             align-items: center;
         }
-        .header-container .btn {
-    margin-bottom: 0.5rem;
-}
+    
         .logo h1 {
             font-size: 1.5rem;
             margin: 0;
@@ -268,6 +266,7 @@
         .btn-secondary {
             background-color: var(--secondary);
             color: var(--white);
+		margin-bottom: 0.25rem; /* Aggiungi margine inferiore se necessario */
 	
         }
         
