--- a/Index.html
+++ b/Index.html
@@ -597,7 +597,13 @@ body.purple-theme {
                 font-size: 1.25rem;
             }
 
-
+section[id] {
+    padding-top: 20px;
+    margin-top: -20px; /* Compensa il padding */
+    display: inline-block;
+    width: 100%;
+	scroll-margin-top: 70px;
+}
 
 .section-header > div {
     display: flex;
