--- a/new version.html
+++ b/new version.html
@@ -492,7 +492,7 @@
 }
 
 .gray-theme {
-    background: linear-gradient(135deg, #757575 0%, #9e9e9e 50%, #e0e0e0 50%, #f5f5f5 100%);
+    background: /*linear-gradient(135deg, #757575 0%, #9e9e9e 50%, #e0e0e0 50%, #f5f5f5 100%)*/ #e0e0e0;
 }
 	    
 /* Stili per i temi alternativi */
