--- a/bag.html
+++ b/bag.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ottimizzatore Valigia</title>
+    <title>Smart Baggage</title>
     <style>
         :root {
             --primary-color: #4a6fa5;
@@ -254,7 +254,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Ottimizzatore Valigia</h1>
+        <h1>Smart Baggage</h1>
         
         <form id="packing-form">
             <div class="form-group">
