--- a/bag.html
+++ b/bag.html
@@ -583,9 +583,9 @@
             "adolescente": {
                 "Accessori adolescente": ["prodotti_igiene_teen", "powerbank", "cuffie", "makeup", "skincare", "assorbenti"]
             },
-           /* "anziano": {
+            "anziano": {
                 "Accessori senior": ["medicinali_specifici", "ausili_mobilita", "cuscini_speciali", "calzature_ergonomiche"]
-            }*/
+            }
         };
 
         // Etichette per elementi specifici per età
@@ -617,10 +617,10 @@
             assorbenti: "Assorbenti/Prodotti igiene femminile",
             
             // Anziano
-            /'medicinali_specifici: "Medicinali/Integratori",
+            medicinali_specifici: "Medicinali/Integratori",
             ausili_mobilita: "Ausili per mobilità",
             cuscini_speciali: "Cuscini speciali/supporti",
-            calzature_ergonomiche: "Calzature ergonomiche"*/
+            calzature_ergonomiche: "Calzature ergonomiche"
         };
 
         // Funzione per ottenere fattori in base all'età
